2008-12-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (parse_driver):  Do not overwrite environmental variable
	GNUPLOT_DRIVER_DIR.

2008-12-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graph3d.c src/graph3d.h src/save.c
	src/show.c src/unset.c docs/gnuplot.doc:
	More work on "set view equal {xy|xyz}'.  It now works well for terminals
	with isotropic coordinate systems, but unfortunately not for x11 or 
	for windows.

2008-12-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Replace assert() statements with int_warn().
	Fix handling of enhanced text for which the rotation angle is non-zero.
	Bug #2424595

2008-12-11  Bastian Maerkisch  <bmaerkisch@web.de>
            Axel Thimm <thimm@users.sourceforge.net>

	* configure.in NEWS src/command.c src/gp_hist.h src/graphics.c
	src/history.c src/plot.c src/readline.c src/readline.h src/show.c
	src/term_api.h src/term.c (term_initialise):

	./configure --with-readline=bsd
	Allow gnuplot to use the NetBSD editline library as an alternative to
	gnu readline. This adaptation was originally coded by Bastian Maerkisch
	and subsequently improved by Axel Thimm and by Tormod Volden.

	The routine term_init() is renamed to term_initialise() to avoid
	conflict with an identically named routine in libedit.

2008-12-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c src/show.c src/variable.c term/pdf.trm:
	Quiet some compiler warnings.

2008-12-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample do_rectangle): Fill style EMPTY
	should be no fill at all, rather than fill with background.
	Bug #2345832
	
2008-12-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Give an error message if the user requests any
	unimplemented features documented for 'set datafile binary'.
	Bug #2378535

2008-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary) src/graph3d.c (boundary3d)