@@ -1,3 +1,7 @@
+2008-12-24  Mike Sutton  <mws115@usa.com>
+
+	* term/x11.trm src/gplt_x11.c: Added size and position options for X11.
+
 2008-12-17  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/x11.trm (parse_driver):  Do not overwrite environmental variable
